@@ -1008,7 +1008,7 @@ SUB setkeys ()
 
 	'DELETEME: This is a temporary fix for gfx_directx not knowing about scShift
 	'(or any other of the new scancodes, but none of the rest matter much (maybe
-	'scPause) except in games that want to use them).
+	'scPause) since there are no games that use them).
 	if (keybd(scLeftShift) or keybd(scRightShift)) <> keybd(scShift) then
 		keybd(scShift) = keybd(scLeftShift) or keybd(scRightShift)
 	end if
